victoriametrics/overlays/observability/vmagent-vm-victoria-metrics-k8s-stack.Ingress.yaml
---
# Source: victoria-metrics-k8s-stack/templates/victoria-metrics-operator/vmcluster/ingress-select.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "victoria-metrics-agent.data-01-dev.ct.fravega.com"
    konghq.com/https-redirect-status-code: "308"
    konghq.com/protocols: "https"
  name: vmagent-vm-victoria-metrics-k8s-stack
  namespace: observability
spec:
  ingressClassName: kong
  rules:
    - host: victoria-metrics-agent.data-01-dev.ct.fravega.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmagent-vm-victoria-metrics-k8s-stack
                port:
                  name: http
  tls:
    - hosts:
        - victoria-metrics-agent.data-01-dev.ct.fravega.com
      secretName: cluster-dns
