victoriametrics/overlays/observability/vmalertmanager-vm-victoria-metrics-k8s-stack.Ingress.yaml
---
# Source: victoria-metrics-k8s-stack/templates/victoria-metrics-operator/vmcluster/ingress-select.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmalertmanager-vm-victoria-metrics-k8s-stack
  namespace: observability
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: vm-victoria-metrics-k8s-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vmalertmanager
    app.kubernetes.io/version: v1.98.0
    helm.sh/chart: victoria-metrics-k8s-stack-0.19.2
    managed-by: vm-operator
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "vmalertmanager.data-01-dev.ct.fravega.com"
    konghq.com/https-redirect-status-code: "308"
    konghq.com/protocols: "https"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - vmalertmanager.data-01-dev.ct.fravega.com
      secretName: cluster-dns
  rules:
    - host: vmalertmanager.data-01-dev.ct.fravega.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmalertmanager-vm-victoria-metrics-k8s-stack
                port:
                  name: http
