victoriametrics/overlays/observability/vmsingle-vm-victoria-metrics-k8s-stack.Ingress.yaml
---
# Source: victoria-metrics-k8s-stack/templates/victoria-metrics-operator/vmsingle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmsingle-vm-victoria-metrics-k8s-stack
  namespace: observability
  labels:
    app.kubernetes.io/component: victoria-metrics-k8s-stack-vmsingle
    helm.sh/chart: victoria-metrics-k8s-stack-0.19.2
    app.kubernetes.io/name: victoria-metrics-k8s-stack
    app.kubernetes.io/instance: vm
    app.kubernetes.io/version: "v1.98.0"
    app.kubernetes.io/managed-by: Helm
    managed-by: vm-operator
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "victoria-metrics.data-01-dev.ct.fravega.com"
    konghq.com/https-redirect-status-code: "308"
    konghq.com/protocols: "https"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - victoria-metrics.data-01-dev.ct.fravega.com
      secretName: cluster-dns
  rules:
    - host: victoria-metrics.data-01-dev.ct.fravega.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmsingle-vm-victoria-metrics-k8s-stack
                port:
                  number: 8429
